hooks/spec/test-tilt/fixtures/syntax-error/Tiltfile_test.py
#!/usr/bin/env python3
"""Tests for Tiltfile - this file is valid even though Tiltfile has syntax errors."""

import unittest


class TestTiltfileSyntax(unittest.TestCase):
    """Test cases that would normally validate Tiltfile syntax."""
    
    def test_tiltfile_loads(self):
        """Test that Tiltfile can be loaded - this will fail due to syntax errors."""
        # In a real test, this would attempt to parse/load the Tiltfile
        self.assertTrue(True)  # Placeholder for fixture


if __name__ == '__main__':
    unittest.main()